--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ sympy-plots-for-*.tex/
 /Assignment2/nbproject/project.properties
 /Assignment2/nbproject/project.xml
 /Assignment3/nbproject/
+/Final/nbproject/private/
